# HydroAngleAnalyzer

./: .gitignore  .pre-commit-config.yaml  README.md  old_pre-commit-config.yaml  pyproject.toml  pytest.ini  search_useless.py  setup.py  verify_imports.py
.agent/workflows/: rebuild_docs.md
.github/workflows/: deploy-docs.yml  releases.yml  testing.yml
HydroAngleAnalyzer/: io_utils.py
HydroAngleAnalyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
HydroAngleAnalyzer/parser/: parser_ase.py  parser_lammps.py
HydroAngleAnalyzer/sliced_method/: angle_fitting.py  surface_defined.py
contact_angle_analysis/: __init__.py  processing.py
docs/: README.md  build_log.txt
docs/examples/: binning_ca.py  parsing_trajectory_files.py  visualisation_sliced_traj.py
docs/examples/results_binned_example/: log_data.txt  rho_field.csv
docs/source/: conf.py  index.rst
docs/source/API/: index.rst
docs/source/introduction/: Installation.rst  Introduction.rst  index.rst
docs/source/tutorials/: Binning_method_tuto.rst  Parser_tutorial.rst  Sliced_method_tuto.rst  Visualization_sliced_droplet.rst  Visualization_trajectories_comparison_methods.rst  index.rst
docs/tutorials/: Binning_method_tuto.md  Parser_tutorial.md  Sliced_method_tuto.md  Visualization_sliced_droplet.md  Visualization_trajectories_comparison_methods.md  parser_tutorial.md
hydro_angle_analyzer/: __init__.py  io_utils.py  processing.py
hydro_angle_analyzer/binning_method/: binning_spherical.py
hydro_angle_analyzer/graphs_analysis/: graphs_circle_surfaces.py
hydro_angle_analyzer/parser/: parser_lammps.py
hydro_angle_analyzer/sliced_method/: angle_fitting.py  surface_defined.py
hydroangleanalyzer/: __init__.py  io_utils.py  multi_processing.py  new_processing.py  processing.py
hydroangleanalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hydroangleanalyzer/angles_frames_analysis/: graphs_circle_slice.py  graphs_circle_surfaces.py
hydroangleanalyzer/binning_method/: contact_angle_analyzer.py
hydroangleanalyzer/contact_angle_method/: __init__.py  contact_angle_analyzer.py  factory.py
hydroangleanalyzer/contact_angle_method/binning_method/: __init__.py  angle_fitting_binning.py  angle_fitting_processing.py  contact_angle_analyzer_lammps.py  surface_definition.py
hydroangleanalyzer/contact_angle_method/sliced_method/: __init__.py  angle_fitting_sliced.py  multi_processing.py  surface_defined.py
hydroangleanalyzer/graphs_analysis/: graphs_circle_surfaces.py
hydroangleanalyzer/parser/: __init__.py  base_parser.py  factory.py  parser_ase.py  parser_dump.py  parser_lammps.py  parser_xyz.py
hydroangleanalyzer/sliced_method/: angle_fitting.py
hydroangleanalyzer/visualization_angles/: __init__.py  binning_trajectory_evolution.py  graphs_circle_slice.py  sliced_trajectory_evolution.py
hydroangleanalyzer/visualization_statistics_angles/: __init__.py  angles_analysis.py  base_trajectory_analyzer.py  binning_trajectory_evolution.py  comparison_methods.py  graphs_circle_slice.py  plotter.py  sliced_trajectory_evolution.py  tools_visu.py
tests/: README  conftest.py  pytest.ini  test_batch_frame_processor.py  test_contact_angle_analyzer.py  test_dump_parser.py  test_hydro_angle_analyzer.py  test_integration.py
tests/test_contact_angle_method/: test_binning_method.py  test_sliced_method.py
tests/test_contact_angle_methods/: test_binning_method.py  test_sliced_method.py
tests/test_parser/: test_parser_ase.py  test_parser_dump.py  test_parser_xyz.py
wetting-angle-kit_JOSS/: paper.bib  paper.md
