[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HydroAngleAnalyzer"
version = "0.1.1"
description = "A simple Python library to parse MD trajectories from LAMMPS and ASE and measure the contact through different methods"
authors = [
    { name = "Gabriel", email = "gabriel.taillandier@matgenix.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.2.0",
    "seaborn>=0.11.0",
    "dask>=2021.3.0",
    "pytables>=3.6.0",
    "h5py>=3.1.0",
    "scikit-learn>=0.24.0",
    "tensorflow>=2.4.0",
    "torch>=1.8.0",
    "netCDF4>=1.5.0",
    "joblib>=1.0.0",
    "flask>=2.0.0",
    "requests>=2.25.0",
    "sqlalchemy>=1.4.0",
    "jupyter>=1.0.0",
    "ipython>=7.22.0",
    "tqdm>=4.62.0",
    "ovito>=3.10.6",
    "ase>=3.23.0b1",
    "cupy-cuda11x",  # Replace '11x' with your specific CUDA version
    "anari_ovito>=0.8.1",
    "visrtx_ovito>=0.8.0",
    "ospray_ovito>=3.0.0"
]

[project.scripts]
hydro_angle_analyzer = "HydroAngleAnalyzer.module:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
