[project]
name = "HydroAngleAnalyzer"
version = "0.1.1"
description = "A simple Python library to parse MD trajectories from LAMMPS and ASE and measure the contact through different methods"
authors = [
    { name = "Gabriel", email = "gabriel.taillandier@matgenix.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "ase>=3.23.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "pymatgen>=2024.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.0",
]

doc = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
]

viz = [
    "plotly>=5.22.0",
    "ipython>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/hydroangleanalyzer"
"Bug Tracker" = "https://github.com/username/hydroangleanalyzer/issues"
"Documentation" = "https://hydroangleanalyzer.readthedocs.io/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hydroangleanalyzer"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=hydroangleanalyzer"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py311"